# zynkbot

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  START_ZYNKBOT.bat  START_ZYNKBOT.sh  TRADEMARK  add_rust_to_system_path.ps1  configure_cargo_features.ps1  install.bat  install.sh  uninstall.bat  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: ANDROID_DEVELOPMENT_PLAN.md  DIGITAL_RESILIENCE.md  ENSEMBLE_MODE.md  FEATURES.md  FOUNDATION_VISION.md  INSTALLATION_TROUBLESHOOTING.md  KNOWN_ISSUES.md  LINUX_INSTALLATION_GUIDE.md  MODELS.md  NETWORKING_FEATURES.md  PROJECT_VISION.md  ROADMAP.md  SDK_VISION.md  WINDOWS_INSTALLATION_GUIDE.md
docs/architecture_and_development/: ARCHITECTURE_COMPREHENSIVE.md  CONTAINMENT_ARCHITECTURE.md  DATABASE_SCHEMA.md  HIPAA_SECURITY_INTEGRATION_GUIDE.md  MEMORY_PROCESSING_PIPELINE.md  MEMORY_RELATIONSHIP_GRAPH.md  MODEL_ARCHITECTURE.md  PROMPT_CONSTRUCTION_PIPELINE.md  RELATIONSHIP_DETECTION_ARCHITECTURE.md
docs/case_studies/: README.md  child_mode.md  conversational_memory.md  developer_workflows.md  emergency_resilience.md  hipaa_compliance.md  hvac_field_service.md  journalist_source_protection.md  private_team_communication.md
docs/snap_ins/: SNAPIN_ARCHITECTURE.md  personal_snap_ins.md  professional_snap_ins.md
docs/troubleshooting/: CLEAN_INSTALL_GUIDE.md  DIAGNOSE_ANTIVIRUS.bat  DIAGNOSE_NETWORK.bat  FIX_WINDOWS_DEFENDER.bat  LLAMAGUARD_ISSUES.md  ONNX_ISSUES.md  install_debug.sh  install_logged.bat  test_zynksync.sh
knowledge_base/: .gitignore  README.md  sample_knowledge_base_document.txt
labs/moe_poc/: README.md  architecture_diagram.txt  example_coordinator.py  example_node_server.py
labs/snapin_platform/: SNAPIN_EMBEDDING_DIMENSIONS.md  SNAPIN_PLATFORM_DESIGN.md
labs/zynksync_improvements/: SYNC_CONFLICT_DETECTION.md
scripts/: uninstall_zynkbot.bat  uninstall_zynkbot.sh
scripts/db/: add_original_text.sql  patch_einstein_entities.py
zynkbot_rust/: CLAUDE.md  package-lock.json  package.json
zynkbot_rust/.cargo/: config.toml
zynkbot_rust/src/: App.css  App.jsx  index.css
zynkbot_rust/src-tauri/: .gitignore  Cargo.toml  build.rs  postinst  tauri.conf.json
zynkbot_rust/src-tauri/.cargo/: config.toml
zynkbot_rust/src-tauri/migrations/: 0001_initial.sql  0002_user_profile_and_pause.sql  0003_tls_cert.sql  0004_kb_fts5.sql  0005_sync_paired.sql  0006_deletion_tombstones.sql  0007_pending_removals.sql
zynkbot_rust/src-tauri/seeds/: einstein_seed.sql
zynkbot_rust/src-tauri/src/: containment.rs  conversation_engine.rs  conversation_history.rs  db.rs  kb_rag.rs  knowledge_base.rs  lib.rs  llm_fact_extractor.rs  memory.rs  nlp_enhancer.rs  question_extractor.rs  safety_classifier.rs  sync_codes.rs  tls.rs  user_identity.rs  web_search.rs  zchat.rs  zynklink.rs  zynksync.rs
zynkbot_rust/src-tauri/src/commands/: chat.rs  conversation.rs  knowledge_base.rs  memory.rs  mod.rs  models.rs  nlp.rs  onboarding.rs  safety.rs  setup_wizard.rs  sync_codes.rs  user_identity.rs  utils.rs  web_search.rs  zchat.rs  zynklink.rs  zynksync.rs
zynkbot_rust/src-tauri/src/llm/: anthropic.rs  local_embeddings.rs  local_models.rs  mod.rs  openai.rs  whisper.rs  xai.rs
zynkbot_rust/src/components/: APIKeyModal.jsx  AboutModal.jsx  ChatMessage.jsx  CollapsibleSidebar.jsx  ConflictResolutionModal.jsx  ContainmentModeSelector.jsx  ConversationHistoryPanel.jsx  CostGuideModal.jsx  EnsembleModal.jsx  GettingStartedModal.jsx  KnowledgeBaseManager.jsx  KnowledgeBasePanel.jsx  MemoryGraphModal.jsx  MemoryManager.jsx  MemoryManagerModal.jsx  OnboardingModal.jsx  SessionInfoModal.jsx  SetupWizard.jsx  SnapInModal.jsx  UserIdentityModal.jsx  VoiceButton.jsx  WhyZynkbotModal.jsx  ZChatModal.jsx  ZynkClusterModal.jsx  ZynkFileBrowserModal.jsx  ZynkLinkPanel.jsx  ZynkSyncPanel.jsx
zynkbot_rust/src/hooks/: useVoiceInput.js
zynkbot_rust/src/styles/: APIKeyModal.css  AboutModal.css  App.css  ChatMessage.css  ConflictResolutionModal.css  ContainmentModeSelector.css  ConversationWindow.css  GettingStartedModal.css  Header.css  KnowledgeBaseManager.css  KnowledgeBasePanel.css  KnowledgeBaseSelector.css  MemoryGraphModal.css  MemoryManager.css  MemoryManagerModal.css  OnboardingModal.css  SessionInfoModal.css  UserIdentityModal.css  WhyZynkbotModal.css  ZynkFileBrowserModal.css
zynkbot_rust/src/utils/: sounds.js
zynkbot_rust/system_docs/_system/: 01_zynkbot_overview.md  02_memory_system.md  03_features.md  04_technical_architecture.md  05_installation_setup.md  06_faq.md
